--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: RH-RealWeather
-version: '0.6BETA'
+version: '1.0'
 author: 'Michał "Bopke" Kubik'
 main: ovh.rehost.realWeather.RealWeather
 softdepend: []
