--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ovh.re-host.RealWeather</groupId>
+    <groupId>pl.rehost.RealWeather</groupId>
     <artifactId>RealWeather</artifactId>
     <version>1.2</version>
     <build>
